# ChangeLog for sys-kernel/dracut
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  25 Mar 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild:
  Synced with sys-kernel/dracut-017-r1::gentoo again.

  02 Mar 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild,
  -files/dracut-9999-usrmount-fsck-fix.patch, metadata.xml:
  Synced with sys-kernel/dracut-017-r1::gentoo.

  12 Jan 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild,
  +files/dracut-9999-usrmount-fsck-fix.patch:
  Test fix for bug #396575.

  12 Jan 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild:
  Synced with sys-kernel/dracut-014 in Portage tree.

  24 Nov 2011; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild:
  Reverted URI to git.kernel.org.

  Removed no-herd btw.

  22 Sep 2011; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild:
  Changed git.kernel.org URL temporary to upstream's mirror for kernel.org
  down-time.

  07 Sep 2011; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild:
  Synced with sys-kernel/dracut-013 in Portage tree.

  10 Aug 2011; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild:
  Updated to changes after 011 release:
  - adding/removing modules
  - repo has been moved from sf.net to kernel.org

  Moreover ebuild has been migrated to git-2 eclass.

  07 Mar 2011; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild,
  +files/dracut-9999-multipath-udev-rules.patch, metadata.xml:
  Updated according to changes in dracut-008-r1 in the main tree. Getting
  source from original dracut repo, branch - master.

  11 Sep 2010; Amadeusz Żołnowski <aidecoe@aidecoe.name> dracut-9999.ebuild:
  Depend on >=baselayout-1.12.13-r1 (only in my overlay at this time).  System
  won't boot with earlier because Dracut mounts devpts and <=baselayout-1.12.13
  doesn't check if it's already mounted.
